// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: SubaccountTag should render a default assigned subaccount 1`] = `
<Fragment>
  Subaccount 12
   (Default)
</Fragment>
`;

exports[`Component: SubaccountTag should render a master account tag 1`] = `
<Fragment>
  Master Account
</Fragment>
`;

exports[`Component: SubaccountTag should render a non-default assigned subaccount 1`] = `
<Fragment>
  Subaccount 12
</Fragment>
`;

exports[`Component: SubaccountTag should render a non-default assigned subaccount 2`] = `
<Fragment>
  Subaccount 13
</Fragment>
`;

exports[`Component: SubaccountTag should render a shared with all tag 1`] = `
<Fragment>
  Shared with all
</Fragment>
`;
